2006-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/MailerUI.js: fixed the contact creation
	from email addresses.

	* UI/WebServerResources/generic.js: centralized the search-related
	functions here since the same code was used across the 3
	applications.

	* UI/Scheduler/UIxCalAptListView.m ([UIxCalAptListView -startDate]) 
	([UIxCalAptListView -endDate]): return the required dates needed
	depending on the value given to the "filterpopup" url parameter.

	* UI/Common/UIxToolbar.m ([UIxToolbar -buttonLabel]): reduced the
	code by invoking UIxComponent's labelForKey:.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -labelForKey:]): use
	[self pageResourceManager] instead of [self resourceManager].

	* UI/Contacts/UIxContactEditorBase.m: invokes
	globallyUniqueObjectId on the clientobject's class instead of the
	hardcoded "SOGoFolder".

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-newAction]): redirect the "new" action to the personal (default)
	contact folder.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	+objectWithName:inContainer:]): new constructor.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-lookupContactWithId:recordId]): always create a contact object,
	even if it does not exist.

2006-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMainView.[hm]: new class to serve as a pseudo
	component that lays out the different components of SOGoCalendar.
	Only serves as an Objective-C counterpart to its xml template.

	* UI/Scheduler/UIxCalInlineMonthOverview.h: interface extracted
	from its .m file.

	* UI/Scheduler/UIxCalFilterPanel.[hm]: new class designed to
	display a widget to handle the information displayed in the
	appointments list. Not currently used, lacks implementation.

	* UI/Scheduler/UIxCalDateSelector.[hm]: new class designed to
	display a calendar as a dynamic widget from where one can select
	the current visible day.
